Refactor and addition of some UI features