@@ -1,7 +1,8 @@
 package proj.app.state;
 
-import proj.app.AppConstants; // Use constants
+import proj.app.AppConstants;
 import proj.app.StatisticsManager;
+import proj.app.SimulationStatisticsSnapshot;
 import proj.model.elements.Animal;
 import proj.model.elements.Plant;
 import proj.model.maps.AbstractWorldMap;
@@ -10,194 +11,170 @@ import proj.simulation.Simulation;
 import proj.app.viewmodels.SelectedAnimalViewModel;
 import proj.util.Vector2d;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 
 /**
- * A background task (implementing {@link Runnable}) responsible for periodically creating
- * immutable snapshots ({@link SimulationStateSnapshot}) of the current simulation state.
- * It queries the live {@link Simulation} object, gathers necessary data (animal positions,
- * plants, water, selected animal, top genotypes from {@link StatisticsManager}), creates
- * defensive copies where necessary, and enqueues the resulting snapshot into a shared
- * {@link SimulationStateQueue} for consumption by the UI thread (via {@link proj.app.render.SimulationRenderer}).
- * This decouples the potentially slower simulation logic thread from the UI rendering thread,
- * improving responsiveness. Uses timing constants from {@link AppConstants}.
+ * Zadanie działające w tle (implementujące {@link Runnable}), odpowiedzialne za okresowe
+ * tworzenie niezmiennych migawek stanu symulacji specjalnie dla celów **renderowania**
+ * ({@link SimulationRenderSnapshot}).
+ * Odpytuje bieżący stan {@link Simulation}, pobiera dane mapy, informacje o wybranym
+ * zwierzęciu z {@link SelectedAnimalViewModel} oraz listę dominujących genotypów
+ * z {@link StatisticsManager} (poprzez wygenerowanie pełnej migawki statystyk).
+ * Tworzy kopie obronne danych tam, gdzie to konieczne, i umieszcza wynikową migawkę
+ * renderowania we współdzielonej kolejce {@link SimulationStateQueue} do konsumpcji
+ * przez wątek UI (np. {@link proj.app.render.SimulationRenderer}).
  */
 public class SimulationStateProducer implements Runnable {
 
     private final Simulation simulation;
-    private final SimulationStateQueue stateQueue;
-    private final StatisticsManager statisticsManager; // Source for top genotypes cache
-    private final SelectedAnimalViewModel selectedAnimalViewModel; // Source for selected animal info
-    private volatile boolean running = true; // Flag to control the producer loop execution
-
-    // Lock is currently not used, relying on Simulation/Map synchronization.
-    // private final ReentrantLock simulationLock = new ReentrantLock();
+    private final SimulationStateQueue<SimulationRenderSnapshot> stateQueue; // Kolejka migawek do renderowania
+    private final StatisticsManager statisticsManager; // Do pobierania danych statystycznych (np. top genotypów)
+    private final SelectedAnimalViewModel selectedAnimalViewModel; // Do pobierania info o wybranym zwierzęciu
+    private volatile boolean running = true; // Flaga kontrolująca pętlę producenta
 
     /**
-     * Constructs a {@code SimulationStateProducer}.
+     * Konstruuje {@code SimulationStateProducer}.
      *
-     * @param simulation            The {@link Simulation} instance providing the live simulation state. Must not be null.
-     * @param stateQueue            The thread-safe {@link SimulationStateQueue} where created snapshots will be enqueued. Must not be null.
-     * @param statisticsManager     The {@link StatisticsManager} used to retrieve the cached list of current top genotypes. Must not be null.
-     * @param selectedAnimalViewModel The {@link SelectedAnimalViewModel} used to retrieve a reference to the currently selected animal
-     *                              for inclusion in the snapshot. Must not be null.
-     * @throws NullPointerException if any parameter is null.
+     * @param simulation            Instancja {@link Simulation} dostarczająca bieżący stan symulacji. Nie może być null.
+     * @param stateQueue            Wątkowo-bezpieczna {@link SimulationStateQueue} dla {@link SimulationRenderSnapshot},
+     *                              do której będą dodawane utworzone migawki. Nie może być null.
+     * @param statisticsManager     Instancja {@link StatisticsManager} używana do uzyskania aktualnych danych statystycznych,
+     *                              z których pobierane są np. topowe genotypy. Nie może być null.
+     * @param selectedAnimalViewModel Instancja {@link SelectedAnimalViewModel} używana do pobrania referencji
+     *                                do aktualnie wybranego zwierzęcia. Nie może być null.
+     * @throws NullPointerException jeśli którykolwiek parametr jest null.
      */
     public SimulationStateProducer(Simulation simulation,
-                                   SimulationStateQueue stateQueue,
+                                   SimulationStateQueue<SimulationRenderSnapshot> stateQueue,
                                    StatisticsManager statisticsManager,
                                    SelectedAnimalViewModel selectedAnimalViewModel) {
         this.simulation = Objects.requireNonNull(simulation, "Simulation cannot be null");
-        this.stateQueue = Objects.requireNonNull(stateQueue, "SimulationStateQueue cannot be null");
+        this.stateQueue = Objects.requireNonNull(stateQueue, "SimulationStateQueue<SimulationRenderSnapshot> cannot be null");
         this.statisticsManager = Objects.requireNonNull(statisticsManager, "StatisticsManager cannot be null");
         this.selectedAnimalViewModel = Objects.requireNonNull(selectedAnimalViewModel, "SelectedAnimalViewModel cannot be null");
     }
 
     /**
-     * Signals the producer thread to stop its execution loop gracefully.
-     * The thread will finish its current iteration (if any) and then terminate.
+     * Sygnalizuje wątkowi producenta, aby zakończył pętlę wykonania w sposób kontrolowany.
+     * Wątek zakończy bieżącą iterację (jeśli jest w trakcie) i następnie się zatrzyma.
      */
     public void stop() {
         this.running = false;
         System.out.println("Simulation State Producer stop requested.");
-        // Consider interrupting the thread if it might be sleeping for a long time
-        // Thread.currentThread().interrupt(); // If needed, handle InterruptedException in run()
     }
 
     /**
-     * The main execution loop of the producer thread.
-     * While the {@code running} flag is true, it repeatedly:
-     * 1. Calls {@link #createCurrentSnapshotData()} to generate a snapshot of the simulation state.
-     * 2. Enqueues the snapshot into the {@link SimulationStateQueue}.
-     * 3. Sleeps for the interval specified by {@link AppConstants#SIMULATION_STATE_PRODUCER_INTERVAL_MS}.
-     * Handles {@link InterruptedException} to allow graceful termination and catches other
-     * potential exceptions during snapshot creation or queueing.
+     * Główna pętla wykonawcza wątku producenta.
+     * Dopóki flaga {@code running} jest ustawiona na true:
+     * 1. Wywołuje {@link #createCurrentRenderSnapshot()} w celu wygenerowania migawki stanu do renderowania.
+     * 2. Umieszcza migawkę w kolejce {@link SimulationStateQueue}.
+     * 3. Usypia na interwał określony przez {@link AppConstants#SIMULATION_STATE_PRODUCER_INTERVAL_MS}.
+     * Obsługuje {@link InterruptedException} dla kontrolowanego zakończenia i łapie inne potencjalne wyjątki.
      */
     @Override
     public void run() {
-        System.out.println("Simulation State Producer started.");
+        String threadName = Thread.currentThread().getName();
+        System.out.println("Simulation State Producer thread [" + threadName + "] started.");
         while (running) {
             try {
-                // Create a snapshot of the current simulation state
-                SimulationStateSnapshot snapshot = createCurrentSnapshotData();
+                SimulationRenderSnapshot renderSnapshot = createCurrentRenderSnapshot();
 
-                if (snapshot != null) {
-                    stateQueue.enqueue(snapshot); // Add the snapshot to the queue
+                if (renderSnapshot != null) {
+                    stateQueue.enqueue(renderSnapshot);
                 } else {
-                    // Map might not be ready yet, or another issue occurred.
-                    System.out.println("State Producer: Snapshot was null, retrying after delay.");
-                    // Wait a bit longer before retrying if snapshot creation failed
+                    System.err.println("State Producer: Failed to create render snapshot, retrying after delay.");
                     Thread.sleep(AppConstants.SIMULATION_STATE_PRODUCER_INTERVAL_MS * 2);
-                    continue; // Skip the rest of this iteration's sleep
+                    continue;
                 }
 
-                // Wait for the specified interval before creating the next snapshot
                 Thread.sleep(AppConstants.SIMULATION_STATE_PRODUCER_INTERVAL_MS);
 
             } catch (InterruptedException e) {
-                Thread.currentThread().interrupt(); // Re-assert interrupt status
-                running = false; // Ensure loop terminates on interrupt
-                System.out.println("Simulation State Producer interrupted during sleep or operation.");
+                Thread.currentThread().interrupt();
+                running = false;
+                System.out.println("Simulation State Producer thread [" + threadName + "] interrupted.");
             } catch (Exception e) {
-                // Catch unexpected errors during snapshot creation or queueing
-                if (running) { // Avoid logging errors if stop() was called concurrently
-                    System.err.println("Error in Simulation State Producer loop: " + e.getMessage());
+                if (running) {
+                    System.err.println("Error in Simulation State Producer loop ("+ threadName +"): " + e.getMessage());
                     e.printStackTrace();
-                    // Avoid busy-waiting in case of persistent errors by sleeping longer
                     try { Thread.sleep(1000); } catch (InterruptedException ie) { Thread.currentThread().interrupt(); running = false; }
                 }
             }
         }
-        System.out.println("Simulation State Producer finished.");
+        System.out.println("Simulation State Producer thread [" + threadName + "] finished.");
     }
 
     /**
-     * Creates an immutable snapshot of the current simulation state by querying
-     * the {@link Simulation}, {@link StatisticsManager}, and {@link SelectedAnimalViewModel}.
-     * It performs defensive copies of mutable data structures (like animal/plant maps using
-     * immutable collections or deep copies where necessary) to ensure the snapshot's
-     * integrity and thread safety when passed to the UI thread.
-     * <p>
-     * **Synchronization Note:** This method relies on the internal synchronization mechanisms
-     * of the {@link Simulation} and {@link AbstractWorldMap} classes (and potentially
-     * {@link StatisticsManager} and {@link SelectedAnimalViewModel}) to provide consistent
-     * views of the data being snapshotted. It uses a synchronized block on the map object
-     * specifically when copying map-related collections.
+     * Tworzy niezmienną migawkę bieżącego stanu symulacji przeznaczoną do RENDEROWANIA.
+     * Pobiera dane mapy z {@link Simulation}, wybrane zwierzę z {@link SelectedAnimalViewModel},
+     * a listę dominujących genotypów uzyskuje poprzez wygenerowanie pełnej migawki statystyk
+     * za pomocą {@link StatisticsManager}. Metoda ta dba o bezpieczeństwo wątkowe poprzez
+     * synchronizację dostępu do mapy i tworzenie kopii obronnych kolekcji.
      *
-     * @return A {@link SimulationStateSnapshot} representing the current state, or {@code null}
-     *         if the simulation map is not yet available or another critical error occurs during data retrieval.
+     * @return Obiekt {@link SimulationRenderSnapshot} reprezentujący stan do narysowania,
+     *         lub {@code null} jeśli mapa symulacji jest niedostępna lub wystąpił inny błąd krytyczny.
      */
-    private SimulationStateSnapshot createCurrentSnapshotData() {
+    private SimulationRenderSnapshot createCurrentRenderSnapshot() {
         AbstractWorldMap map = simulation.getMap();
         if (map == null) {
-            System.err.println("State Producer Warning: Map is not available yet for snapshot creation.");
-            return null; // Map not initialized or ready
+            // Logowanie ostrzeżenia, jeśli mapa jest null
+            // System.err.println("State Producer Warning: Map is not available for creating render snapshot.");
+            return null; // Mapa nie jest gotowa
         }
 
+        // 1. Pobierz najnowszą pełną migawkę statystyk z Managera Statystyk.
+        Optional<SimulationStatisticsSnapshot> statsSnapshotOpt = statisticsManager.generateCurrentSnapshot();
+
+        // 2. Wyciągnij listę topowych genotypów z migawki statystyk.
+        List<String> topGenotypes = statsSnapshotOpt
+                .map(SimulationStatisticsSnapshot::topGenotypes)
+                .orElse(Collections.emptyList());
+
+        // 3. Pobierz referencję do aktualnie wybranego zwierzęcia z ViewModelu.
+        Animal currentSelectedAnimal = selectedAnimalViewModel.getCurrentAnimalReference();
+
+        // 4. Skopiuj dane mapy (zwierzęta, rośliny, woda) w sposób bezpieczny wątkowo.
         Map<Vector2d, ?> waterFieldsCopy = null;
         Map<Vector2d, List<Animal>> animalsCopy;
         Map<Vector2d, Plant> plantsCopy;
-        List<String> topGenotypes; // Assumes returned list is safe or a copy
-        Animal currentSelectedAnimal; // Just the reference
 
-        // Synchronize on the map object to ensure atomic read of related collections
+        // Synchronizacja na obiekcie mapy zapewnia spójny odczyt jej stanu.
         synchronized (map) {
-            // Copy water fields if applicable (map type check)
+            // Skopiuj pola wody, jeśli to WaterWorld
             if (map instanceof WaterWorld waterMap) {
-                // Create a new HashMap copy from the potentially mutable internal map
                 waterFieldsCopy = new HashMap<>(waterMap.getWaterFields());
             }
 
-            // Create a deep copy of the animal map: Outer map is new HashMap, inner lists are immutable copies.
+            // Stwórz głęboką kopię mapy zwierząt
             animalsCopy = new HashMap<>();
-            map.getAnimals().forEach((key, valueList) -> { // getAnimals() returns unmodifiable view
-                if (valueList != null) {
-                    // Create an immutable copy of the list for the snapshot using List.copyOf()
-                    animalsCopy.put(key, List.copyOf(valueList));
-                } else {
-                    // Ensure null lists are represented as empty immutable lists
-                    animalsCopy.put(key, Collections.emptyList());
-                }
+            map.getAnimals().forEach((key, valueList) -> {
+                animalsCopy.put(key, valueList != null ? List.copyOf(valueList) : Collections.emptyList());
             });
 
-            // Create a copy of the plant map. Plant objects themselves are assumed immutable enough.
-            plantsCopy = new HashMap<>(map.getPlants()); // getPlants() returns unmodifiable view
-        } // End synchronized block on map
+            // Stwórz kopię mapy roślin
+            plantsCopy = new HashMap<>(map.getPlants());
+        } // Koniec bloku synchronized(map)
 
-        // Get top genotypes (StatisticsManager getter provides a safe copy)
-        topGenotypes = statisticsManager.getCurrentTopGenotypes();
-
-        // Get currently selected animal reference (ViewModel provides safe access)
-        currentSelectedAnimal = selectedAnimalViewModel.getCurrentAnimalReference();
-
-        // Create the immutable snapshot object using the copied/safe data
-        return new SimulationStateSnapshot(
+        // 5. Utwórz i zwróć niezmienną migawkę renderowania.
+        return new SimulationRenderSnapshot(
                 animalsCopy,
                 plantsCopy,
-                waterFieldsCopy, // This might be null if not a WaterWorld
+                waterFieldsCopy,
                 topGenotypes,
-                currentSelectedAnimal // Pass the reference (Animal objects assumed handled)
+                currentSelectedAnimal
         );
     }
 
     /**
-     * Creates an initial snapshot of the simulation state. This is typically called
-     * once when the simulation window is first displayed, before the regular
-     * production loop starts, to provide an immediate visual representation.
-     * It uses the same underlying logic as the periodic snapshot creation.
+     * Tworzy początkową migawkę stanu symulacji do renderowania.
      *
-     * @return The initial {@link SimulationStateSnapshot} representing the state at the moment
-     *         it's called, or {@code null} if the snapshot creation fails (e.g., map not ready).
+     * @return Początkowa migawka {@link SimulationRenderSnapshot} lub {@code null}.
      */
-    public SimulationStateSnapshot createInitialSnapshot() {
-        System.out.println("Creating initial simulation state snapshot...");
-        SimulationStateSnapshot snapshot = createCurrentSnapshotData(); // Reuse the safe creation logic
+    public SimulationRenderSnapshot createInitialSnapshot() {
+        System.out.println("Creating initial simulation render snapshot...");
+        SimulationRenderSnapshot snapshot = createCurrentRenderSnapshot();
         if (snapshot == null) {
-            System.err.println("Failed to create initial snapshot.");
+            System.err.println("Failed to create initial render snapshot.");
         }
         return snapshot;
     }
